# eda_coffee_shop

./: .gitignore  README.md  basic_analysis.py  coffee_sales_data_analysis.py  data_extraction.py  eda-analysis-on-daily-coffee-transaction.ipynb  eda_coffee.py  main.py  pyproject.toml  run_phase1-1.py  run_phase1.py  run_visualizations.py  test_modules.py
config/: config.yaml  logging.yaml  paths.yaml
docs/: ANALYSIS-MODULE.md  ARD-COFFEE-SALES.md  IMPLEMENTATION_GUIDE.md  VISUAL-MODULE.md  VISUALIZATION_IMPLEMENTATION.md  VISUALIZATION_QUICKSTART.md
notebooks/: demand_prediction_&_behavioral_analysis.ipynb  eda-analysis-on-daily-coffee-transaction.ipynb
output/: VISUALIZATION_INDEX.md  executive_summary.txt
outputs/: coffee_counts.csv  daily_detailed_analysis.csv  daily_revenue.csv  hourly_counts.csv  hourly_detailed_analysis.csv  numeric_correlations.csv  phase1_customer_journey.csv  phase1_customer_segments.csv  price_by_coffee.csv  product_performance_detailed.csv
outputs/Phase1/: phase1_daily_anomalies.csv  phase1_forecasting_results.csv
outputs/advanced/: business_insights_report.csv  correlation_matrix.csv  revenue_anomalies.csv
outputs/behavioral/: customer_segments.csv
outputs/predictions/: 30_day_forecasts.csv
src/: __init__.py
src/analysis/: __init__.py  analyzer.py  payment_behavior.py  product_preference.py  run_analysis.py  sales_performance.py  seasonality.py  time_demand.py
src/data/: __init__.py  enrichment.py  pipeline.py  preprocessor.py
src/utils/: __init__.py  (+2 more)
tests/: test_complete_pipeline.py  test_visualizations.py
(+8 files in other folders)
